kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddns-acc
  namespace: ddns-acc
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: ddns-acc
